# Angry-birds-clone

./: CMakeLists.txt  README.md  readme.txt
Levels/: test.txt
doc/: C++_Project documetation.docx  Credits.txt
evaluations/: peer_evaluation.txt  plan_evaluation.txt  project_evaluation.txt
src/: Ball.cpp  Ball.hpp  Bird.cpp  Bird.hpp  Block.cpp  Block.hpp  Bomb.cpp  Bomb.hpp  Box.cpp  Box.hpp  Destructables.hpp  Game.cpp  Game.hpp  Ground.hpp  Highscores.cpp  Highscores.hpp  Main.cpp  MainMenu.cpp  MainMenu.hpp  Normal.cpp  Normal.hpp  Pig.hpp  Points.hpp  Scoreboard.cpp  Scoreboard.hpp  Speed.cpp  Speed.hpp  box.cpp  box.hpp  collision_listener.hpp  example.cpp  file_exception.hpp  filereader.cpp  filereader.hpp  filetest.cpp  game  gameLoop.cpp  ground.cpp  ground.hpp  level.cpp  (+9 more)
src/.cmake/api/v1/reply/: index-2020-08-25T19-57-45-0912.json  target-Angry_Birds-Debug-65b4079109f3f58c4334.json
src/Highscores/: Highscores.txt  Highscores1.txt  Highscores2.txt  Highscores3.txt
src/Levels/: level1.txt  level2.txt  level3.txt  stars.txt  test.txt
